# backtest

./: Cargo.toml
assets/: eth15.json
src/: chart.rs  gallery.rs  lib.rs  loader.rs
src/model/: backtest_result.rs  binance_klines_item.rs  candle_ny.rs  candle_stick.rs  decimal.rs  mod.rs  position.rs  position_direction.rs  session.rs  trade.rs  trade_result.rs  trading_model.rs  trigger_type.rs
src/strategies/: lib.rs  macro_soup.rs  mod.rs  sfp.rs
